# course_2023-05_summer

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build_mkdocs_website.yml
Community Guidelines/Code of Conduct/: index.html
Contributing guide/python_style_guide/: index.html
CourseObsidianVault/paper_summaries/: index.html
CourseObsidianVault/video_chatter/video_chatter_AT/: index.html
CourseObsidianVault/video_chatter/video_chatter_BL/: index.html
CourseObsidianVault/video_chatter/video_chatter_CC/: index.html
CourseObsidianVault/video_chatter/video_chatter_CK/: index.html
CourseObsidianVault/video_chatter/video_chatter_DS/: index.html
CourseObsidianVault/video_chatter/video_chatter_ES/: index.html
CourseObsidianVault/video_chatter/video_chatter_GF/: index.html
CourseObsidianVault/video_chatter/video_chatter_GR/: index.html
CourseObsidianVault/video_chatter/video_chatter_IS/: index.html
CourseObsidianVault/video_chatter/video_chatter_JL/: index.html
CourseObsidianVault/video_chatter/video_chatter_LH/: index.html
CourseObsidianVault/video_chatter/video_chatter_MH/: index.html
CourseObsidianVault/video_chatter/video_chatter_MV/: index.html
CourseObsidianVault/video_chatter/video_chatter_PS/: index.html
CourseObsidianVault/video_chatter/video_chatter_RS/: index.html
docs/: index.md
docs/Community Guidelines/: Code of Conduct.md
docs/Contributing guide/: python_style_guide.md
docs/video_chatter/: video_chatter_meta_summary.md
search/: search_index.json
(+165 files in other folders)
