[tool.poetry]
name = "main-course-repo"
version = "0.1.0"
description = ""
authors = ["jonmatthis <jonmatthis@gmail.com>"]
readme = "README.md"
packages = [{include = "main_course_repo"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
